cleaning some code

--- a/src/main/resources/web/nuxeo.war/layouts/project1-msit_layout_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layouts/project1-msit_layout_template.xhtml
@@ -39,7 +39,7 @@
 
                 <c:choose>
 
-                  <c:when test="#{widget.type == 'studio_header'}">
+                  <c:when test="#{widget.type == 'athento_widget_header'}">
                     <td class="studioHeader" colspan="#{renderingColspan}">
                       <ui:include src="/widgets/incl/widget_label_template.xhtml">
                         <ui:param name="labelStyleClass"
