--- a/src/main/resources/web/nuxeo.war/layouts/tab_layout_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layouts/tab_layout_template.xhtml
@@ -10,7 +10,7 @@
 
   <c:if test="false">
     Overrides default summary template to generate styling according
-    to Studio grid table
+    to grid table
   </c:if>
   <nxu:set var="layoutStyleClass"
     value="#{layout.properties.styleClass}"
