--- a/src/main/resources/web/nuxeo.war/layouts/layout_summary_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layouts/layout_summary_template.xhtml
@@ -9,7 +9,7 @@
   
   <c:if test="false">
     Overrides default summary template to generate styling according
-    to Studio layout table (currently hardcoded in Nuxeo for default
+    to layout table (currently hardcoded in Nuxeo for default
     summary layout)
   </c:if>
 
@@ -26,7 +26,7 @@
             <c:set var="headerColspan" value="#{renderingColspan}" />
 
             <c:choose>
-              <c:when test="${widget.type == 'studio_header'}">
+              <c:when test="${widget.type == 'athento_widget_header'}">
                 <td colspan="#{headerColspan}">
                   <h:outputText value="#{widget.label}"
                     rendered="#{!widget.translated}"
