AT-311 refactoring contributions in separated xml files

--- a/src/main/resources/web/nuxeo.war/layouts/tab_layout_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layouts/tab_layout_template.xhtml
@@ -16,7 +16,7 @@
     value="#{layout.properties.styleClass}"
     resolveTwice="true">
 
-    <div class="gridContainer studioGridContainer #{layoutStyleClass}">
+    <div class="gridContainer #{layoutStyleClass}">
       <nxl:layoutRow>
         <div class="gridRow">
           <nxl:layoutRowWidget>
